namespace LeadersBoardGame.GameLogic.Enums;

public enum GameActionType
{
    PhaseChange,
    CharacterAction,
    Recruitment,
    Banishment
}