namespace LeadersBoardGame.GameLogic.Enums;

public enum TransitionTarget
{
    Turn,
    BanishmentPhase,
    TurnStart,
    ActionsPhase,
    RecruitmentPhase,
    TurnEnd
}