namespace LeadersBoardGame.GameLogic.Enums;

public enum TransitionType
{
    Start,
    End
}