classDiagram
    direction TB

    %% Enums
    class GameActionType {
        <<enumeration>>
        Transition
        CharacterAction
        Recruitment
        Banishment
    }

    class TransitionType {
        <<enumeration>>
        Start
        End
    }

    class TransitionTarget {
        <<enumeration>>
        Turn
        TurnStart
        ActionsPhase
        RecruitmentPhase
        TurnEnd
        BanishmentPhase
    }

    %% Interface
    class IGameAction {
        <<interface>>
        +ActionType : GameActionType
    }

    %% Actions
    class TransitionAction {
        +TransitionType : TransitionType
        +Target : TransitionTarget
    }

    class CharacterActionTarget {
        +Character : Character
        +OriginPos : Position?
        +DestPos : Position?
    }

    class CharacterAction {
        +IsActiveAbility : Boolean
        +SourceCharacter : Character
        +Targets : List~CharacterActionTarget~
    }

    class RecruitmentAction {
        +Character : Character
        +DestPos : Position
    }

    class BanishmentAction {
        +Card : CharacterCard
        +Team : TeamColor
    }

    %% Héritage
    IGameAction <|.. TransitionAction
    IGameAction <|.. CharacterAction
    IGameAction <|.. RecruitmentAction
    IGameAction <|.. BanishmentAction

    %% Relations
    IGameAction --> GameActionType
    TransitionAction --> TransitionType
    TransitionAction --> TransitionTarget
    CharacterAction --> CharacterActionTarget
